Rework stylesmanager

This fixes various crash conditions which where present in the styles manager.
It used a different model for the style manager that handles the temporary styles
during they are modified and not yet saved.

REVIEW: 109651
BUG: 314516