plugins/textshape/dialogs/CharacterGeneral.cpp
@@ -185,4 +185,9 @@ int CharacterGeneral::nextStyleId()
     return m_styleManager->paragraphStyle(m_paragraphStyleModel->index(widget.nextStyle->currentIndex()).internalId())->styleId();
 }
 
+KoCharacterStyle *CharacterGeneral::style() const
+{
+    return m_style;
+}
+
 #include <CharacterGeneral.moc>
